Utility methods for praw

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "flit_core.buildapi"
 
 
 [project]
-authors = [{name = "Timendum", email = "timedum@gmail.com"}]
-requires-python=">=3.10"
+authors = [{ name = "Timendum", email = "timedum@gmail.com" }]
+requires-python = ">=3.10"
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Environment :: Console",
@@ -18,7 +18,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
-  "Topic :: Utilities"
+  "Topic :: Utilities",
 ]
 name = "reddit-richtext"
 dependencies = []
@@ -30,7 +30,20 @@ name = "rrichtext"
 
 [tool.ruff]
 # Enable Pyflakes `E` and `F` codes by default.
-lint.select = ["E", "F", "W", "I", "N", "UP", "B", "G", "PIE", "TCH", "PLE", "PLW"]
+lint.select = [
+  "E",
+  "F",
+  "W",
+  "I",
+  "N",
+  "UP",
+  "B",
+  "G",
+  "PIE",
+  "TCH",
+  "PLE",
+  "PLW",
+]
 lint.ignore = ["N802", "N806", "N815"]
 line-length = 100
 output-format = "full"
@@ -39,15 +52,12 @@ output-format = "full"
 [project.optional-dependencies]
 dev = [
   "reddit-richtext[lint]",
-  "reddit-richtext[test]"
+  "reddit-richtext[test]",
+  "reddit-richtext[praw]",
 ]
-lint = [
-  "ruff >=0.0.291"
-]
-test = [
-  "pytest >=2.7.3",
-  "pytest-cov >=5.0.0"
-]
+lint = ["ruff >=0.0.291"]
+test = ["pytest >=2.7.3", "pytest-cov >=5.0.0"]
+praw = ["praw>7"]
 
 [tool.pytest.ini_options]
 testpaths = "tests"
